<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gr3.compumovil.udea.edu.co.lab2activities.Lugar1"
    android:weightSum="1"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollV">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/nombreLugar1"
                    android:id="@+id/nombreL"
                    android:textAppearance="?android:attr/textAppearanceMedium"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/informacioG"
                    android:id="@+id/nombreL2"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/ubicacionL"
                    android:id="@+id/ubicacionL"
                    android:height="80dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/temperaturaL"
                    android:id="@+id/temperatura"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:text="@string/lugaresRecomendados"
                    android:id="@+id/lugaresR"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />

            </LinearLayout>

        </ScrollView>


    </LinearLayout>

</LinearLayout>
