<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gr3.compumovil.udea.edu.co.lab2activities.Lugar3"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollV">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:text="@string/nombreLugar3"
                    android:id="@+id/nombreL"
                    android:textAppearance="?android:attr/textAppearanceMedium"

                    android:textAlignment="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="149dp"
                    android:text="@string/informacioG3"
                    android:id="@+id/nombreL2"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ubicacionL3"
                    android:id="@+id/ubicacionL"
                    android:height="80dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="79dp"
                    android:text="@string/temperaturaL3"
                    android:id="@+id/temperatura"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:text="@string/lugaresRecomendados3"
                    android:id="@+id/lugaresR"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:autoText="false" />

            </LinearLayout>

        </ScrollView>


    </LinearLayout>3

</LinearLayout>
